search/sorting bar spacing fixed

--- a/src/index.css
+++ b/src/index.css
@@ -166,6 +166,7 @@ main {
   background-color: var(--color3);
   border-radius: 1px;
   display: flex;
+  gap: 1rem;
   justify-content: space-between;
   margin-bottom: 1rem;
 }
@@ -173,7 +174,8 @@ main {
 .search_bar {
   display: flex;
   gap: 0.5rem;
-  padding: 1% 2%;
+  padding-left: .5rem;
+  width: 100%;
 }
 
 .search_bar img {
@@ -184,7 +186,7 @@ main {
   background-color: transparent;
   border: none;
   outline: none;
-  padding: 1% 2%;
+  width: 100%;
 }
 
 .search_bar input::placeholder {
@@ -202,6 +204,7 @@ main {
   outline: none;
   padding: 2% 4%;
   position: relative;
+  white-space: nowrap;
 }
 
 .sort_btn .sort_arrow {
